# graphql-starter

./: .env.example  .gitignore  README.md  pyproject.toml
graphql_starter/: main.py
graphql_starter/db/: database.py  link.py  user.py
graphql_starter/schema/: link.py  user.py
tests/: test_graphql_starter.py
