[tool.poetry]
name = "graphql-starter"
version = "0.1.0"
description = "Graphql-starter is a graphql start project with fastapi"
authors = ["huangkai"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
